<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_other">
        <Preference
            android:icon="@drawable/ic_delete"
            android:key="removeCounters"
            android:title="@string/settings_wipe_title" />
        <Preference
            android:icon="@drawable/ic_share"
            android:key="exportCounters"
            android:summary="@string/settings_export_summary"
            android:title="@string/settings_export_title" />
        <Preference
            android:icon="@drawable/ic_tip"
            android:key="tip"
            android:summary="@string/settings_tip_summary"
            android:title="@string/settings_tip_title" />
        <Preference
            android:icon="@drawable/ic_link"
            android:key="homepage"
            android:summary="@string/settings_homepage_summary"
            android:title="@string/settings_homepage_title" />
        <Preference
            android:enabled="false"
            android:icon="@drawable/ic_info"
            android:key="version"
            android:summary="@string/unknown_version"
            android:title="@string/settings_version_title" />
    </PreferenceCategory>
</PreferenceScreen>
