<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_display">
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/themeSelectionEntries"
            android:entryValues="@array/themeSelectionValues"
            android:icon="@drawable/ic_palette"
            android:key="theme"
            android:title="@string/settings_theme" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_display"
            android:key="hide_controls"
            android:summary="@string/settings_hide_controls_summary"
            android:title="@string/settings_hide_controls_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_time"
            android:key="hide_last_update"
            android:title="@string/hide_last_update_setting_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_info"
            android:key="hide_counter_category_label"
            android:title="@string/hide_counter_category_label_title"
            android:summary="@string/hide_counter_category_label_summary" />
    </PreferenceCategory>
</PreferenceScreen>
