<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">

    <Preference
        android:key="hardware_preferences"
        android:title="@string/settings_controls"
        android:summary="@string/settings_controls"
        android:icon="@drawable/ic_phone" />

    <Preference
        android:key="display_preferences"
        android:title="@string/settings_display"
        android:summary="@string/settings_display"
        android:icon="@drawable/ic_palette" />

    <Preference
        android:key="counter_preferences"
        android:title="@string/settings_counter"
        android:summary="@string/settings_counter"
        android:icon="@drawable/ic_plus_one" />

    <Preference
        android:key="notification_preferences"
        android:title="@string/settings_notifications"
        android:summary="@string/settings_notifications"
        android:icon="@drawable/ic_time" />

    <Preference
        android:key="backup_preferences"
        android:title="@string/settings_backup"
        android:summary="@string/settings_backup"
        android:icon="@drawable/ic_share" />

    <Preference
        android:key="other_preferences"
        android:title="@string/settings_other"
        android:summary="@string/settings_other"
        android:icon="@drawable/ic_info" />

</PreferenceScreen>